# microstructure-alpha

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_massive_headless.py
alpha/: __init__.py  alpha_decay.py  attribution.py  ensemble.py  feature_engine.py  return_predictor.py  signal_combiner.py  signal_quality.py
analytics/: __init__.py  attribution.py  benchmark.py  tearsheet.py
backtest/: backtest_agent.py  event_engine.py  execution_sim.py  metrics.py  microstructure_sim.py  plotters.py  verify_backtest.py
config/: execution.yaml  execution_live.yaml  execution_paper.yaml  instruments.yaml  instruments_nasdaq.yaml  instruments_paper.yaml  loader.py  schema.py  thresholds.yaml  thresholds_paper.yaml
core/: backend.py  interfaces.py  types.py
data/: databento_loader.py  diagnostics.py  event_bus.py  historical_loader.py  ib_client.py  l2_orderbook.py  normalization.py  normalizer.py  quality.py  realtime_stream.py  storage.py  tick_db.py  tick_stream.py  validate_pipeline.py
decision/: adaptive_exits.py  confidence.py  eligibility.py  entry_conditions.py  exits.py  sizing.py  trade_journal.py
execution/: analytics.py  ibkr_router.py  impact_model.py  order_router.py  slippage.py  trade_ledger.py  twap.py
infrastructure/: __init__.py  (+2 more)
rust/: Cargo.toml
rust/src/: adaptive_exits.rs  entropy.rs  feature_engine.rs  gmm.rs  hmm.rs  l2_orderbook.rs  lib.rs  linalg.rs  moments.rs  ofi.rs  online_scaler.rs  return_predictor.rs  returns.rs  ring_buffer.rs  signal_combiner.rs  surface_analytics.rs  tail_risk.rs  transition.rs
(+74 files in other folders)
