[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "microstructure-alpha"
version = "0.1.0"
requires-python = ">=3.11"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "."
module-name = "_microstructure_core"
features = ["pyo3/extension-module"]
