[package]
name = "microstructure_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_microstructure_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
kiddo = "4"
nalgebra = "0.33"
statrs = "0.17"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
